Fix contrast nav to darker background

--- a/styles/base.css
+++ b/styles/base.css
@@ -31,7 +31,7 @@ header span {
 
 /* Navigation */
 nav {
-  background-color: #a89144;
+  background-color: #62521c;
   display: flex;
   justify-content: center;
 }
@@ -52,7 +52,7 @@ nav ul li a {
   align-items: center;
   justify-content: center;
   text-align: center;
-  color: white;
+  color: rgb(255, 255, 255);
   text-decoration: none;
   padding: 20px;
   height: 100%;
